--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
 
         <activity android:name=".MainActivity"/>
         <activity android:name=".HandlerThreadActivity"/>
+        <activity android:name=".DrawableActivity"/>
 
     </application>
     
