SurfaceView加载大帧率动画

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".MainActivity"/>
         <activity android:name=".HandlerThreadActivity"/>
         <activity android:name=".DrawableActivity"/>
+        <activity android:name=".SurfaceViewActivity"/>
 
     </application>
     
